# CrescentGL

./: .gitattributes  .gitignore  Application.cpp  Application.h  CMakeLists.txt  CrescentGL.slnx  CrescentGL.vcxproj  CrescentGL.vcxproj.filters  Window.cpp  Window.h  core.h  glad.c  log.h  main.cpp
Dependencies/include/glad/: glad.h
Include/: Win32Utils.h
Include/Asset/: AssetLoader.h  AssetType.h  Loader.h  Registry.h
Include/Asset/Type/: Type.h
Include/Collection/: Collections.h  DynamicList.h  DynamicQueue.h
Include/Core/: Application.h  Log.h  Time.h  Window.h
Include/Input/: InputAction.h  InputCodes.h  InputContext.h  InputListener.h  InputSystem.h
Include/Math/: Constants.h  Exponential.h  Interpolation.h  Math.h  Trigonometry.h
Include/Math/Matrix/: Matrix4x4.h
Include/Math/Vector/: Vector2.h  Vector4.h
Include/Node/: Node.h  Transform.h  Tree.h
Include/Node/Node3D/: Camera3D.h  Node3D.h  VisualInstance3D.h
Include/Node/Node3D/Geometry/: GeometryInstance3D.h  InstancedVisual3D.h  MeshInstance3D.h  MultiMeshInstance3D.h
Include/Node/Node3D/Light/: DirectionalLight3D.h  Light3D.h  PointLight3D.h
Include/Render/: BatchRenderer.h  GPUDisposalQueue.h  Mesh.h  RenderData.h  RenderGroup.h  RenderPacket.h  RenderStats.h  SceneData.h  SceneRenderData.h
Include/Render/Material/: Material.h
Include/Render/Primitives/: BoxMesh.h
Include/Render/Shader/: Shader.h
Include/Render/Texture/: Texture.h
Include/Scene/: DemoScene.h  Node.h  Scene.h  Transform.h  Tree.h
Include/Scene/Nodes3D/: Camera3D.h  Node3D.h  VisualInstance3D.h
Include/Scene/Nodes3D/Geometry/: GeometryInstance3D.h  InstancedVisual3D.cpp  InstancedVisual3D.h  MeshInstance3D.h  MultiMeshInstance3D.h
Include/Scene/Nodes3D/Light/: Light3D.h  PointLight3D.h
Include/UI/: DebugPanel.h  Panel.h  SceneHierarchyPanel.h  SceneTabBarPanel.h  ToolbarPanel.h  UIObserver.h  UISystem.h
Include/Util/: FileOperations.h  Util.h
Shaders/: default.frag  default.vert  demo.frag  demo.vert  lit.frag  lit.vert  unlit.frag  unlit.vert  wire.frag  wire.geom  wire.vert
Shaders/Include/: SceneData.glsl  SceneRenderData.glsl
Source/: Win32Utils.cpp
Source/Asset/: AssetLoader.cpp  Loader.cpp  Registry.cpp
Source/Core/: Application.cpp  Log.cpp  Time.cpp  Window.cpp
Source/Input/: InputAction.cpp  InputContext.cpp  InputSystem.cpp
Source/Node/: Node.cpp  Transform.cpp  Tree.cpp
Source/Node/Node3D/: Camera3D.cpp  Node3D.cpp  VisualInstance3D.cpp
Source/Node/Node3D/Geometry/: GeometryInstance3D.cpp  InstancedVisual3D.cpp  MeshInstance3D.cpp  MultiMeshInstance3D.cpp
Source/Node/Node3D/Light/: DirectionalLight3D.cpp  Light3D.cpp  PointLight3D.cpp
Source/Render/: BatchRenderer.cpp  GPUDisposalQueue.cpp  Mesh.cpp
Source/Render/Material/: Material.cpp
Source/Render/Primitives/: BoxMesh.cpp
Source/Render/Shader/: Shader.cpp
Source/Render/Texture/: Texture.cpp
Source/Scene/: DemoScene.cpp  Node.cpp  Scene.cpp  Transform.cpp  Tree.cpp
Source/Scene/Nodes3D/: Camera3D.cpp  Node3D.cpp  VisualInstance3D.cpp
Source/Scene/Nodes3D/Geometry/: GeometryInstance3D.cpp  InstancedVisual3D.cpp  MeshInstance3D.cpp  MultiMeshInstance3D.cpp
Source/Scene/Nodes3D/Light/: Light3D.cpp  PointLight3D.cpp
Source/UI/: DebugPanel.cpp  Panel.cpp  SceneHierarchyPanel.cpp  SceneTabBarPanel.cpp  ToolbarPanel.cpp  UIObserver.cpp  UISystem.cpp
Source/Util/: FileOperations.cpp
include/: core.h  log.h
include/Asset/: AssetLoader.h  Loader.h  Registry.h
include/Asset/DataTypes/: DataType.h
include/Collection/: DynamicList.h  DynamicQueue.h
include/Collections/: Collections.h  DynamicList.h  DynamicQueue.h
include/Core/: Application.h  Core.h  Log.h  Random.h  Time.h  Window.h
include/Input/: InputAction.h  InputCodes.h  InputContext.h  InputSystem.h
include/Math/: Arithmetic.h  Common.h  Constants.h  Exponential.h  Interpolation.h  Math.h  Trigonometry.h  Vector3.h
include/Math/Matrix/: Matrix4x4.h
include/Math/Quaternion/: Quaternion.h
include/Math/Vector/: Vector2.h  Vector3.h  Vector4.h
include/Render/: BatchRenderer.h  Mesh.h
include/Render/Material/: Material.h
include/Render/Primitives/: BoxMesh.h
include/Render/Shader/: Shader.h
include/Scene/: DemoScene.h  Node.h  Scene.h  Tree.h
include/Scene/Camera/: Camera.h
include/Scene/Nodes3D/: Camera3D.h  MeshInstance3D.h  MultiMeshInstance3D.h  Node3D.h
include/Shader/: Shader.h
include/Util/: FileOperations.h  Util.h
src/: main.cpp
src/Asset/: AssetLoader.cpp  Loader.cpp  Registry.cpp
src/Core/: Application.cpp  Time.cpp  Window.cpp
src/Input/: InputAction.cpp  InputContext.cpp  InputSystem.cpp
src/Render/: BatchRenderer.cpp  Mesh.cpp
src/Render/Material/: Material.cpp
src/Render/Primitives/: BoxMesh.cpp
src/Render/Shader/: Shader.cpp
src/Render/Texture/: Texture.cpp
src/Scene/: DemoScene.cpp  Node.cpp  Transform.cpp  Tree.cpp
src/Scene/Camera/: Camera.cpp
src/Scene/Nodes3D/: Camera3D.cpp  MeshInstance3D.cpp  MultiMeshInstance3D.cpp  Node3D.cpp
src/Shader/: Shader.cpp
src/Util/: FileOperations.cpp
